--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
 </head>
 
 <body>
-    <h1 class="headStash ">TRAVEL&nbsp;&nbsp;<span class="colorChange">STASH</span></h1>
-    <br>
-    <div class=" center-align  ">
+    <div class="row">
+    <h1 class="headStash center-align col s12 m12 l12">TRAVEL&nbsp;&nbsp;<span class="colorChange">STASH</span></h1>
+   </div> <br>
+    <div class="center-align">
         <div id="testing" class="row  center-align cyan lighten-5">
             <form class="col s12 m12 l12 z-depth-5 ">
                 <div class="row">
@@ -26,7 +27,7 @@
                             placeholder="password"></textarea>
                     </div>
                 </div>
-                <button class="btn waves-effect waves-light hoverable cyan darken-2" type="submit" name="action"
+                <button class="btn waves-effect waves-light hoverable cyan lighten-2" type="submit" name="action"
                     id="user-sub">Submit</button>
             </form>
         </div>
