--- a/stash.html
+++ b/stash.html
@@ -6,6 +6,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+       <!-- Font-Awesome Icon - used for the GitHub Logo -->
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <!--Import Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!-- Compiled and minified CSS -->
@@ -29,7 +31,9 @@
     <nav class="nav-extended card-panel cyan darken-2 row">
         <div class="nav-wrapper">
             <!-- BRAND  -->
-            <h1 class="top flow-text">Travel Stash</h1>
+
+            <h1 class="top flow-text"><a class="grey-text text-lighten-4" href="./dashboard.html"><i class="fa fa-arrow-left" aria-hidden="true"></i></a></button> Travel Stash</h1>
+
         </div>
 
         <div class="nav-content">
@@ -47,25 +51,25 @@
 
         <div class="col m9 l9">
             <!-- main page content  ------------------------------------------------------------------------------->
-            <script>
-                function initMap() {
-                    //Map options
-                    var options = {
-                        zoom: 11,
-                        center: { lat: -34.9285, lng: 138.6007 }
-                    }
-                    //New map
-                    var map = new google.maps.Map(document.getElementById('map'), options);
-                }
-            </script>
-
-
             <div class="row teal lighten-4">
+
                 <div id="map" class="col s12 m12 l12">
-                    <div><img class="center-align col s12 m12 l12" width="650" src="./assets/images/map-default.jpg">
+
+                    <script>
+                        function initMap() {
+                            //Map options
+                            var options = {
+                                zoom: 11,
+                                center: { lat: -34.9285, lng: 138.6007 }
+                            }
+                            //New map
+                            var map = new google.maps.Map(document.getElementById('map'), options);
+                        }
+                    </script>
+        <!-- <div><img class="center-align col s12 m12 l12" width="650" src="./assets/images/map-default.jpg"> -->
                     </div>
                 </div>
-            </div>
+          
 
 
 
@@ -159,19 +163,14 @@
         <script>
             const process = { env: {} };
             process.env.GOOGLE_MAPS_API_KEY =
-              "AIzaSyA9fmq_Egb2AJtQsf6vVY9olIDogkwEEUY";
-          </script>
+                "AIzaSyA9fmq_Egb2AJtQsf6vVY9olIDogkwEEUY";
+        </script>
 
 
 
-        <input
-        id="pac-input"
-        class="controls"
-        type="text"
-        placeholder="Search Box"
-      />
-      <div id="map"></div>
-    
+        <input id="pac-input" class="controls" type="text" placeholder="Search Box" />
+        <div id="map"></div>
+
 
     </div>
 
@@ -181,8 +180,9 @@
     <script src="https://code.jquery.com/jquery-3.6.1.slim.min.js"
         integrity="sha256-w8CvhFs7iHNVUtnSP0YKEg00p9Ih13rlL9zGqvLdePA=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-    <script  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA9fmq_Egb2AJtQsf6vVY9olIDogkwEEUY&callback=initAutocomplete&libraries=places&v=weekly"
-        defer></script> 
+    <script
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA9fmq_Egb2AJtQsf6vVY9olIDogkwEEUY&callback=initAutocomplete&libraries=places&v=weekly"
+        defer></script>
     <script src="./assets/scripts/weather.js"></script>
     <script src='./assets/scripts/stash.js'></script>
 
