fixed script and css and script links

--- a/stash.html
+++ b/stash.html
@@ -19,7 +19,7 @@
 
     <!-- Additional style liks added for map functionality -->
     <link rel="stylesheet" type="text/css" href="./assets/styles/mapstyle.css" />
-    <script type="module" src="/mapindex.js"></script>
+   
 
     <!-- Title Bar  -->
     <title>Travel Stash</title>
@@ -183,6 +183,7 @@
     <script
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA9fmq_Egb2AJtQsf6vVY9olIDogkwEEUY&callback=initAutocomplete&libraries=places&v=weekly"
         defer></script>
+        <script type="module" src="./assets/scripts/mapindex.js"></script>
     <script src="./assets/scripts/weather.js"></script>
     <script src='./assets/scripts/stash.js'></script>
 
